# j-reit-finder

./: README.md  app.py  pyproject.toml
j_reit_finder/: __init__.py  data.py  stock_selector.py
