[project]
name = "j-reit-finder"
version = "0.1.0"
description = "J-REIT銘柄選定アプリケーション"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "httpx>=0.28.1",
    "lxml>=5.3.1",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "streamlit>=1.30.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
